syntax = "proto3";

option java_package = "org.hse.moodactivities.common.utils.proto.responses.auth";
option java_multiple_files = true;

package responses;

message LoginResponse {
  enum ResponseType {
    SUCCESS = 0;
    ERROR = 1;
  }
  ResponseType responseType = 1;
  string token = 2;
  string message = 3;
}
